--- a/src/components/resume/resume.css
+++ b/src/components/resume/resume.css
@@ -1,120 +1,106 @@
-@import url('https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700');
-
-.resume .overlay {
-    position: absolute;
-    left: 0;
-    top: 0;
-    bottom: 0;
-    right: 0;
-    background-color: rgba(0,0,0,0.9);
-    display: flex;
-    align-items:center;
-    justify-content:center;
-    align-content:center;
-    opacity:0;
-    transition: all 0.25s ease-in;
-}
-
-.resume .overlay .modal-slide {
+.resume, .header {
     width: 80vw;
-    max-width:800px;
-    min-height: 50vh;
-    /*border: 1px solid #fff;*/
-    padding: 3%;
-    font-family: 'Open Sans', sans-serif;
-    font-weight:400;
-    display: flex;
-    align-items:center;
-    justify-content:center;
-    align-content:center;
-    border-radius: 8px;
-    box-shadow: 0 0 6px rgba(255,255,255,0.5);
-    overflow-y:auto;
-    margin-top: 65px;
-}
-
-.resume .overlay .modal-slide p, .resume .overlay .modal-slide li {
-    font-size: 16px;
-    line-height: 1.5;
-    color: #fff;
-    text-shadow: 0 0 15px rgba(255,255,255,0.5);
-}
-
-.resume .overlay .modal h1 {
-    color: #fff;
-}
-
-.resume .overlay .modal .skills .skills-span {
-    display: flex;
-    width: 90%;
+    max-width: 1088px;
     margin: 0 auto;
-    height: 100%;
-    justify-content: flex-start;
-    align-items: center;
-    flex-wrap: wrap;
+    padding: 20px;
+    font-family: Arial, "Helvetica Neue", Helvetica, sans-serif !important;
 }
 
-.resume .overlay .modal .skills .skills-span .skill-col {
-    width: 25%;
-}
-
-@media(max-width:768px){
-    .resume .overlay .modal .skills .skills-span .skill-col {
-        width: 50%;
-    }
-    .resume .overlay .modal .skills .skills-span .skill-col p {
-        margin: 5px;
-    }
-}
-
-
-.slide {
-
-}
-
-.modal-slide-enter {
-    transform: translateY(-75vh) scale(1);
-    transition: all 1s;
-}
-.modal-slide-enter-active{
-    transform: translateY(0) scale(1);
-}
-
-.modal-slide-leave {
-    transform: translateY(0)  scale(1);
-    transition: all 0.3s;
-}
-
-.modal-slide-leave-active {
-    transform: translateY(75vh) scale(1);
-    opacity:0;
-}
-
-.resume-nav {
-    position: absolute;
-    top: 0;
-    width: 100%;
-    background: #222;
-    height: 5vh;
-    min-height:45px;
+.resume {
+    background-color: #fff;
     display: flex;
-    justify-content: center;
-    align-items: center;
-    z-index:9999;
-    border-bottom: 1px solid #444
+    box-shadow: 0 0 8px #ccc;
+    
+}
+.header {
+    display: flex;
+    justify-content: space-between;
 }
 
-.resume-nav a {
-    font-family: 'Open Sans', sans-serif;
-    width: 60px;
-    color: #999;
-    transition: all 0.5s ease-in;
+.header h1 {
+    border-bottom: 0;
+    font-size: 32px;
+    padding: 0;
 }
 
-.resume-nav a:hover {
-    color: #888;
+.header a {
+    margin-top: 25px;
 }
 
-.resume-nav a.active {
-    color: #fff;
+.left-col {
+    width: 40%;
+}
+
+.right-col {
+    border-left: 1px solid #ccc;
+    padding-left: 20px;
+}
+
+
+
+h1 {
+    color: #666;
+    margin: 15px 0;
+    display: block;
+    font-size: 16px;
+    border-bottom: 1px solid #ccc;
+    padding-bottom: 12px;
+}
+
+h2 {
+    color: #444;
+    margin: 0;
+    font-size: 22px;
+}
+
+ul {
+    margin: 12px 24px;
+    padding: 0;
+}
+
+li {
+    font-size: 16px;
+    margin-top: 16px;
+}
+
+.job {
+    padding: 20px;
+}
+
+.social-links a img {
+    width: 32px;
+    height: 32px;
+    margin: 20px;
+    opacity: 0.5
+}
+
+section {
+    padding-top: 20px;
+    padding-right: 25px;
+}
+
+section a:link, section a:visited, .header a:link, .header a:visited {
+    color: blue
+}
+
+section a:hover, .header a:hover {
+    text-decoration: underline;
+}
+
+@media (max-width: 1088px) {
+    .resume {
+        flex-direction: column
+    }
+    .resume .right-col {
+        border-left: 0;
+        padding-left: 0;
+    }
+    .resume .left-col {
+        width: 100%;
+        order: 1
+    }
+
+    .job {
+        padding-left: 0;
+     }
 }
