--- a/src/components/resume/resume.css
+++ b/src/components/resume/resume.css
@@ -1,51 +1,141 @@
-.resume, .header {
-    width: 80vw;
+main {
+    position: relative;
     max-width: 1088px;
-    margin: 0 auto;
-    padding: 20px;
-    font-family: Arial, "Helvetica Neue", Helvetica, sans-serif !important;
+    margin: 50px auto;
+    padding: 5px;
+    display: grid;
+    grid-gap: 10px;
+    grid-template-areas:
+        "header header"
+        "aside section";
+    grid-template-columns: 2fr 5fr;
+    font-family: BlinkMacSystemFont, -apple-system, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif;
+    box-shadow: 0 0 8px #ccc;
+    background-color: #fff;
+    color: #222;
 }
 
-.resume {
-    background-color: #fff;
-    display: flex;
-    box-shadow: 0 0 8px #ccc;
-    
+header {
+    background-color: #252779;
+    color: #fff;
+    padding: 10px 25px;
+    grid-area: header;
+    display: grid;
+    grid-template-areas:
+        "h1 header-aside"
+        "summary header-aside";
+    grid-template-columns: 4fr 3fr;
+    border-bottom: 1px solid #ccc;
+    min-height: 225px;
 }
-.header {
+
+header>h1 {
+    grid-area: h1;
+    align-self: end;
+    justify-self: start;
+    margin: 0 0 5px 0;
+    font-size: 48px;
+}
+
+header>h1>.thin {
+    font-weight: 100;
+}
+
+header>h1>.thick {
+    padding-right: 2px;
+    font-weight: 400;
+}
+
+header>summary {
+    grid-area: summary;
+    align-self: start;
+    justify-self: start;
+    font-weight: 100;
+    font-size: 16px;
+}
+
+header>aside {
+    padding-left: 10px;
+    grid-area: header-aside;
+    align-self: center;
+    justify-self: end;
+    border-left: 2px solid rgba(255, 255, 255, 0.25);
+}
+
+header>aside>div {
+    padding-left: 10px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    margin: 0 auto;
+    line-height: 1.75;
+}
+
+header>aside>div>img {
+    display: block;
+    border-radius: 100%;
+    width: 100px;
+    height: 100px;
+    margin: 0 auto;
+}
+
+header>aside a {
+    color: #fff;
+}
+
+header>aside a:hover {
+    text-decoration: underline;
+}
+
+
+
+
+aside.sidebar {
+    grid-area: aside;
+    padding: 10px;
+    border-right: 1px solid #ccc;
+}
+
+aside.sidebar h1 {
+    padding-bottom: 5px;
+    border-bottom: 1px solid #ccc;
+    font-size: 16px;
+    color: #666;
+}
+
+aside.sidebar>section {
+    margin-bottom: 25px;
+    font-size: 14px;
+}
+
+
+section.experience {
+    padding: 10px;
+    grid-area: section;
+}
+
+
+
+article {
+    margin-bottom: 75px;
+}
+
+article>h1 {
     display: flex;
     justify-content: space-between;
-}
-
-.header h1 {
-    border-bottom: 0;
-    font-size: 32px;
-    padding: 0;
-}
-
-.header a {
-    margin-top: 25px;
-}
-
-.left-col {
-    width: 40%;
-}
-
-.right-col {
-    border-left: 1px solid #ccc;
-    padding-left: 20px;
-}
-
-
-
-h1 {
-    color: #666;
-    margin: 15px 0;
-    display: block;
-    font-size: 16px;
+    align-items: center;
+    padding-bottom: 5px;
     border-bottom: 1px solid #ccc;
-    padding-bottom: 12px;
+    font-size: 16px;
 }
+
+article>h1>.dates {
+    font-size: 14px;
+    color: #666;
+}
+
 
 h2 {
     color: #444;
@@ -54,6 +144,7 @@ h2 {
 }
 
 ul {
+    list-style-type: square;
     margin: 12px 24px;
     padding: 0;
 }
@@ -61,46 +152,100 @@ ul {
 li {
     font-size: 16px;
     margin-top: 16px;
+    line-height: 1.5;
 }
 
-.job {
-    padding: 20px;
+.social-links .links {
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .social-links a img {
     width: 32px;
     height: 32px;
     margin: 20px;
-    opacity: 0.5
+    opacity: 0.5;
 }
 
-section {
-    padding-top: 20px;
-    padding-right: 25px;
+.personal a {
+    font-size: 16px;
+    color: blue;
 }
 
-section a:link, section a:visited, .header a:link, .header a:visited {
-    color: blue
-}
-
-section a:hover, .header a:hover {
-    text-decoration: underline;
-}
-
-@media (max-width: 1088px) {
-    .resume {
-        flex-direction: column
+@media (max-width: 968px) {
+    body {
+        background-color: #fff;
     }
-    .resume .right-col {
+
+    main {
+        grid-template-areas:
+            "header"
+            "section"
+            "aside";
+        grid-template-columns: none;
+        width: 100vw !important;
+        margin: 0;
+        box-shadow: none;
+        background-color: transparent;
+
+    }
+
+    header {
+        grid-template-areas:
+            "h1"
+            "summary"
+            "header-aside";
+        grid-template-columns: none;
+    }
+
+    header>aside {
+        padding: 0;
+        padding-top: 35px;
+        grid-area: header-aside;
+        align-self: center;
+        justify-self: center;
         border-left: 0;
-        padding-left: 0;
-    }
-    .resume .left-col {
-        width: 100%;
-        order: 1
+        text-align: center;
     }
 
-    .job {
-        padding-left: 0;
-     }
+    header>h1 {
+        padding: 0;
+        padding-top: 35px;
+        grid-area: h1;
+        align-self: center;
+        justify-self: center;
+        border-left: 0;
+    }
+
+    article>h1 {
+        flex-direction: column;
+        justify-content: start;
+        align-items: start;
+    }
+}
+
+.pdf-link {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 120px;
+    height: 25px;
+    border-radius: 8px;
+    position: absolute;
+    top: -40px;
+    right: 0px;
+    font-size: 12px;
+    color: #222;
+    background-color: #fff;
+    transition: all 0.25s ease-in-out;
+    box-shadow: none;
+}
+
+.pdf-link:hover {
+    transform: translateY(3px);
+    box-shadow: rgba(0, 0, 0, 0.2) 0px 32px 8px,
+    rgba(0, 0, 0, 0.1) 0px 32px 16px,
+    rgba(0, 0, 0, 0.2) 0px 32px 32px;
+    
 }
