--- a/src/css/joemaddalone.css
+++ b/src/css/joemaddalone.css
@@ -1,11 +1,5 @@
-
-    body {
-      background-color: #f8f8f8;
-      font-family: monospace;
-    }
-
-
-
-
-
-
+body {
+  background-color: #f8f8f8;
+  margin: 0;
+  padding: 0;
+}
