--- a/src/writes/_includes/index.css
+++ b/src/writes/_includes/index.css
@@ -1,12 +1,24 @@
-body {
+ body {
 	background-color: #111;
+	font-family: Verdana, "Bitstream Vera Sans", sans-serif;
+}
+
+header {
+	padding: 20px;
+	margin: 0 auto;
+	max-width: 800px;
+	color: #fff
+}
+
+header b {
+	color: #999;
 }
 
 .standard-article {
-	font-size: 1rem;
+	font-size: 1.2rem;
 	padding: 20px;
 	margin: 0 auto;
-	width: 800px;
+	max-width: 800px;
 	color: #fff
 }
 
@@ -20,5 +32,29 @@ body {
 }
 
 .standard-article p {
-	line-height: 1.5;
+	display: block;
+    margin-block-start: 1em;
+    margin-block-end: 1em;
+    margin-inline-start: 0px;
+    margin-inline-end: 0px;
+}
+
+.postlist {
+	margin: 0;
+	padding: 0;
+}
+
+.postlist .postlist-item {
+	display: flex;
+	flex-direction: column;
+	list-style-type: none;
+}
+
+.postlist .postlist-item .postlist-link {
+	font-size: 1.5rem;
+}
+
+.postlist .postlist-item .postlist-date {
+	font-size: 1rem;
+	padding-bottom: 5px;
 }
