happy with this for now

--- a/src/_includes/components/launcher/launcher.css
+++ b/src/_includes/components/launcher/launcher.css
@@ -1,11 +1,9 @@
-body {
+body, html {
   background-color: #eee;
 }
 
 .launcher {
 	display: flex;
-	width: 100vw;
-	height: 100vh;
 	justify-content: center;
 	align-items: center;
 }
