--- a/src/_includes/landing.html
+++ b/src/_includes/landing.html
@@ -19,25 +19,11 @@
         <meta name="msapplication-TileColor" content="#ffffff" />
         <meta name="msapplication-TileImage" content="/assets/ms-icon-144x144.png" />
         <meta name="theme-color" content="#ffffff" />
-        <link
-            rel="stylesheet"
-            href="https://cdnjs.cloudflare.com/ajax/libs/tachyons/4.11.1/tachyons.min.css"
-            integrity="sha512-d0v474klOFSF7qD9WDvyRxAvXaWSxCHDZdnBSZQjo8BpVr6vpjwAgqetpqkKP38DzlOzdVPaLVnzzW1Ba8wB9w=="
-            crossorigin="anonymous"
-        />
-        <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/semantic-ui@2.4.2/dist/semantic.min.css" />
-        <link href="https://unpkg.com/prismjs@1.20.0/themes/prism-okaidia.css" rel="stylesheet" />
-        <link rel="stylesheet" href="/@includes/index.css" />
-        <title>{{title}}</title>
+        <title>joe.maddalone</title>
     </head>
     <body>
-        <header class="flex items-center justify-between bb">
-            <b><a href="/writes/">I write stuff. sometimes.</a></b>
-            <a href="/">
-                <img src="/assets/favicon-32x32.png" width="32" height="32" alt="">
-            </a>
-        </header>
-        <main class="standard-article">{{content|safe}}</main>
-        <footer>Joe Maddalone</footer>
+		<div>
+			{{content|safe}}
+		</div>
     </body>
 </html>
