--- a/src/_includes/index.css
+++ b/src/_includes/index.css
@@ -75,7 +75,7 @@ html {
 
 header {
 	font-size: 75%;
-	padding: 25px 0;
+	padding: 25px 10px;
 	margin: 0 auto;
 	max-width: 800px;
 	color: #222;
@@ -86,7 +86,7 @@ header b {
 }
 
 footer {
-	padding-top: 15px;
+	padding: 15px 8px;
 	font-size: 75%;
 	margin: 20px auto;
 	max-width: 800px;
@@ -95,7 +95,7 @@ footer {
 
 .standard-article {
 	margin: 0 auto;
-	padding: 5px;
+	padding: 10px;
 	max-width: 800px;
 	color: #222;
 }
@@ -119,7 +119,7 @@ footer {
 
 .postlist {
 	margin: 0;
-	padding: 0;
+	padding: 4px;
 }
 
 .postlist .postlist-item {
