--- a/src/_includes/layout.html
+++ b/src/_includes/layout.html
@@ -26,7 +26,7 @@
             crossorigin="anonymous"
         />
         <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/semantic-ui@2.4.2/dist/semantic.min.css" />
-        <link href="https://unpkg.com/prismjs@1.20.0/themes/prism-okaidia.css" rel="stylesheet" />
+        <link href="https://unpkg.com/prismjs@1.20.0/themes/prism.css" rel="stylesheet" />
         <link rel="stylesheet" href="/@includes/index.css" />
         <title>{{title}}</title>
     </head>
