--- a/src/_includes/layout.html
+++ b/src/_includes/layout.html
@@ -38,6 +38,9 @@
             </a>
         </header>
         <main class="standard-article">{{content|safe}}</main>
-        <footer>Joe Maddalone</footer>
+        <footer class="flex justify-between">
+            <div>I'm Joe Maddalone.</div>
+            <div><i>This is not a blog, these pages are changed all the time.</i></div>
+        </footer>
     </body>
 </html>
