--- a/src/_includes/layout.html
+++ b/src/_includes/layout.html
@@ -39,7 +39,7 @@
         </header>
         <main class="standard-article">{{content|safe}}</main>
         <footer class="flex justify-between">
-            <div>I'm Joe Maddalone.</div>
+            <div>I'm Joe Maddalone</div>
             <div><i>This is not a blog, these pages are changed all the time.</i></div>
         </footer>
     </body>
