--- a/src/_includes/layout.html
+++ b/src/_includes/layout.html
@@ -28,7 +28,7 @@
         <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/semantic-ui@2.4.2/dist/semantic.min.css" />
         <link href="https://unpkg.com/prismjs@1.20.0/themes/prism.css" rel="stylesheet" />
         <link rel="stylesheet" href="/@includes/index.css" />
-        <title>{{title}}</title>
+        {% seo "" %}
     </head>
     <body>
         <header class="flex items-center justify-between bb">
