--- a/src/_includes/components/resume/resume.css
+++ b/src/_includes/components/resume/resume.css
@@ -8,6 +8,10 @@
   transition: all 0.25s ease-in-out;
 }
 
+#resume-svg .animated-group {
+  transition: all 0.25s ease-in-out;
+}
+
 #resume-svg path {
 	transition: all 0.25s ease-in-out;
 }
