--- a/src/_includes/layout.html
+++ b/src/_includes/layout.html
@@ -25,7 +25,7 @@
             integrity="sha512-d0v474klOFSF7qD9WDvyRxAvXaWSxCHDZdnBSZQjo8BpVr6vpjwAgqetpqkKP38DzlOzdVPaLVnzzW1Ba8wB9w=="
             crossorigin="anonymous"
         />
-        <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/semantic-ui@2.4.2/dist/semantic.min.css" />
+        <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.5.0/semantic.min.css" />
         <link href="https://unpkg.com/prismjs@1.20.0/themes/prism.css" rel="stylesheet" />
         <link rel="stylesheet" href="/@includes/index.css" />
         {% seo "" %}
