--- a/src/pages/experiments.astro
+++ b/src/pages/experiments.astro
@@ -236,6 +236,14 @@ import createSlug from "../lib/createSlug";
                     <span class="description">seam carving</span>
                     <span class="counter fill-low">2</span>
                 </a>
+                <a
+                    href="/experiments/unicards"
+                    class="shadow hover"
+                >
+                    <span class="label">UC</span>
+                    <span class="description">unicode cards</span>
+                    <span class="counter fill-low">3</span>
+                </a>
             </div>
         </div>
         <div class="content">
