--- a/src/pages/experiments/seam/index.astro
+++ b/src/pages/experiments/seam/index.astro
@@ -20,7 +20,7 @@
             </p>
             <div style="margin-bottom: 20px;">
                 &larr; Back to <a href="/experiments">
-                    joe.maddalone.com/experiments</a>
+                    joemaddalone.com/experiments</a>
             </div>
             <button id="carveBtn_100">100%</button>
             <button id="carveBtn_80">80%</button>
