canvas video thing

--- a/src/pages/experiments.astro
+++ b/src/pages/experiments.astro
@@ -147,10 +147,6 @@ import createSlug from "../lib/createSlug";
             .fill-low {
                 background-color: var(--target-low);
             }
-            .container {
-                width: 400px;
-                margin-right: 25px;
-            }
             .explist {
                 display: flex;
                 align-items: center;
@@ -234,6 +230,11 @@ import createSlug from "../lib/createSlug";
                     <span class="label">WA</span>
                     <span class="description">web audio</span>
                     <span class="counter fill-low">3</span>
+                </a>
+                <a href="/experiments/canvas-exp" class="shadow hover">
+                    <span class="label">CE</span>
+                    <span class="description">canvas exp</span>
+                    <span class="counter fill-low">4</span>
                 </a>
             </div>
         </div>
