--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,6 +1,15 @@
-<header class="flex items-center justify-between bb">
-  <b><a href="/writes/">I write stuff. sometimes.</a></b>
-  <a href="/">
-      <img src="/assets/favicon-32x32.png" width="32" height="32" alt="">
-  </a>
-</header>
+---
+---
+
+<div class="ui top fixed menu" style="background-color: #f8f8f8;">
+  <div class="ui flex items-center">
+    <a class="mt1 ml1" href="/">
+      <img src="/assets/favicon-32x32.png" width="32" height="32" alt="" />
+    </a>
+  </div>
+  <div class="right menu">
+    <a class="item f6" href="/writes"> write </a>
+    <a class="item f6" href="/experiments"> experiment </a>
+    <a class="item f6" href="/resume"> work </a>
+  </div>
+</div>
