--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,6 +2,6 @@
 import BaseLayout from '../layouts/BaseLayout.astro';
 import Launcher from '../components/launcher';
 ---
-<BaseLayout includeHeader={false}>
+<BaseLayout includeHeader={false} includeFooter={false}>
     <Launcher client:load />
 </BaseLayout>
