--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -122,8 +122,13 @@ html.dark {
 
 body,
 html {
+	height: auto;
 	background-color: #eee;
-	font-size: 18px;
+	font-size: 16px;
+}
+
+body {
+	overflow-y: scroll;
 }
 
 header {
@@ -147,8 +152,9 @@ footer {
 }
 
 .standard-article {
-	margin: 0 auto;
+	margin: 4rem auto;
 	padding: 10px;
+	font-size: 16px;
 	max-width: 800px;
 	color: #222;
 }
