--- a/src/pages/experiments.astro
+++ b/src/pages/experiments.astro
@@ -103,8 +103,13 @@ const pageTitle = "experiments";
                 <span class="counter fill-low"></span>
             </a>
             <a href="/experiments/canvas-exp" class="shadow hover">
-                <span class="label">CE</span>
-                <span class="description">canvas exp</span>
+                <span class="label">CVG</span>
+                <span class="description">canvas video grid</span>
+                <span class="counter fill-low"></span>
+            </a>
+            <a href="/experiments/canvas-video-shape" class="shadow hover">
+                <span class="label">CVS</span>
+                <span class="description">canvas video shape clipping</span>
                 <span class="counter fill-low"></span>
             </a>
         </div>
